Theme z-index bug FIXED

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ hr{
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1;
+    z-index: 150;
 }
 .header-right {
     padding-right: 50px;
